--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,97 @@
+/* Removes all margin and padding from all elements */
+* { margin: 0;
+    padding: 0;
+}
+
+/* Body styling */
 body {
-    margin: auto 0;
+    /* margin: auto 0; */
+    background-color: #42210B;
+}
+
+/* Header styling */
+header {
+    background-color: #006837;
+}
+
+h1 {
+    color: #ffffff;
+    font-family: 'Playfair Display', serif;
+}
+
+nav h2 {
+    font-family: 'Lobster', sans-serif;
+}
+/* Buttons */
+/* Quote buttons styling */
+.btn-qt {
+    background-color: #D1952C;
+    font-family: 'Lobster', sans-serif;
+    border-radius: 30px 0 30px 0;
+    color: #f6f6f6;
+
+}
+
+/* Portfolio buttons */
+main button#before-btn {
+    border-radius: 30px 0 0 30px;
+}
+
+main button#after-btn {
+    border-radius: 0 30px 30px 0;
+}
+
+/********* For JavaScript on Portfolio buttons****************/
+.portActive {
+    background-color: #D1952C;
+}
+
+.portNotActive {
+    background-color: #C19A6B;
+}
+
+/* hr */
+main hr {
+    border: 1px solid #006837;
+}
+
+nav a {
+    color: yellow;
+}
+
+nav a:visited {
+    color: yellow;
+}
+
+nav a:hover {
+    color: white;
+}
+
+nav a:active {
+    color: #D1952C;
+}
+
+main {
+    background-color: #47311A;
+}
+
+main h2 {
+    font-family: 'Playfair Display', serif;
+    color: #f6f6f6;
+}
+
+main p {
+    font-family: 'Nunito', sans-serif;
+    color:#dfccb3;
+}
+
+
+
+footer {
+    background-color: #006837;
 }
 
 img {
     display: none;
 }
+
