--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,6 +21,7 @@ h1 {
 
 nav h2 {
     font-family: 'Lobster', sans-serif;
+    color:#ffffff;
 }
 /* Buttons */
 /* Quote buttons styling */
@@ -35,10 +36,12 @@ nav h2 {
 /* Portfolio buttons */
 main button#before-btn {
     border-radius: 30px 0 0 30px;
+    color: black;
 }
 
 main button#after-btn {
     border-radius: 0 30px 30px 0;
+    color: #ffffff;
 }
 
 /********* For JavaScript on Portfolio buttons****************/
