--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,28 +1,59 @@
 /* Removes all margin and padding from all elements */
-* { margin: 0;
+/* * { margin: 0;
     padding: 0;
-}
+} */
 
 /* Body styling */
 body {
-    /* margin: auto 0; */
+    margin: 0 auto;
     background-color: #42210B;
 }
 
 /* Header styling */
 header {
     background-color: #006837;
+    display: flex;
 }
+
+.btn-qt.qt1 {
+    margin-left: auto;
+}
+
+header {
+    position: sticky;
+    top: 0;
+    height: 10vh;
+    min-height: 70px;
+    padding: 0;
+}
+
+nav p {
+    margin-left: 55%;
+    font-size: .75em;
+}
+
+
+
+/* .logoImg {
+    padding: 0;
+
+} */
 
 h1 {
     color: #ffffff;
     font-family: 'Playfair Display', serif;
+    margin: 0;
+    text-align: center;
 }
 
-nav h2 {
+section h2,p {
+    text-align: center;
+}
+
+/* nav.logoImg {
     font-family: 'Lobster', sans-serif;
     color:#ffffff;
-}
+} */
 /* Buttons */
 /* Quote buttons styling */
 .btn-qt {
@@ -30,7 +61,10 @@ nav h2 {
     font-family: 'Lobster', sans-serif;
     border-radius: 30px 0 30px 0;
     color: #f6f6f6;
+}
 
+button {
+    display: inline-block;
 }
 
 /* Portfolio buttons */
@@ -56,6 +90,11 @@ main button#after-btn {
 /* hr */
 main hr {
     border: 1px solid #006837;
+    width: 50%;
+}
+
+h2 {
+    margin-bottom: 0;
 }
 
 nav a {
@@ -76,6 +115,7 @@ nav a:active {
 
 main {
     background-color: #47311A;
+    margin: 0 1em 0 1em;
 }
 
 main h2 {
@@ -88,7 +128,14 @@ main p {
     color:#dfccb3;
 }
 
+/* Section 1 */
+#section1 * {
+    padding: auto;
+}
 
+.portfolioCar {
+    margin-bottom: 0;
+}
 
 footer {
     background-color: #006837;
