--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -26,7 +26,6 @@ body {
         "middle middle middle"
         "bottom bottom bottom";
     grid-template-columns: auto ;
-
 }
 
 
@@ -66,6 +65,10 @@ nav {
 nav li {
     list-style: none;
     margin-left: auto;
+}
+
+main {
+    grid-area: middle;
 }
 
 footer {
