--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -62,9 +62,24 @@ nav {
     margin: 0;
 }
 
+nav img {
+    max-width: 50%;
+    margin: 2em 0 0 1em;
+}
+
+nav ul {
+    margin-left: auto;
+}
+
 nav li {
     list-style: none;
     margin-left: auto;
+}
+
+nav button {
+    border-radius: 30px 0;
+    font-size: 1.5rem;
+    padding: .5em;
 }
 
 main {
