--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -63,12 +63,14 @@ nav {
 }
 
 nav img {
-    max-width: 50%;
+    max-width: 33%;
     margin: 2em 0 0 1em;
 }
 
 nav ul {
     margin-left: auto;
+    margin-right: 1em;
+    margin-top: 1.5em;
 }
 
 nav li {
@@ -80,7 +82,12 @@ nav button {
     border-radius: 30px 0;
     font-size: 1.5rem;
     padding: .5em;
+    margin-bottom: .5em;
+    color: rgb(246, 246, 246);
+    background-color: rgb(210, 150, 45);
+    font-family: Playfair display;
 }
+
 
 main {
     grid-area: middle;
@@ -88,7 +95,7 @@ main {
 
 footer {
     grid-area: bottom;
-    background-color: #006837;
+    background-color: rgb(0, 102, 54);
     height: 10vh;
     min-height: 70px;
     padding: 0;
