--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -1,4 +1,4 @@
-section {
+/* section {
     border: 3px solid red;
 }
 
@@ -16,7 +16,9 @@ main {
 
 div {
     border: 3px solid orange;
-}
+} */
+
+
 
 
 body {
@@ -41,9 +43,7 @@ body {
     margin: 0 auto;
 }
 
-.section1 img {
-    display: none;
-}
+
 
 header {
     grid-area: top;
@@ -82,15 +82,56 @@ nav button {
     border-radius: 30px 0;
     font-size: 1.5rem;
     padding: .5em;
-    margin-bottom: .5em;
+    margin-bottom: .35em;
     color: rgb(246, 246, 246);
     background-color: rgb(210, 150, 45);
     font-family: Playfair display;
 }
 
+a.spanish:link {
+    color: yellow;
+}
+
+a.spanish:visited {
+    color: yellow;
+}
+
+a.spanish:active {
+    color: white;
+}
+
 
 main {
     grid-area: middle;
+}
+
+
+
+/* .section1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+} */
+
+
+
+.section1 figure {
+    display: none;
+}
+
+figure {
+    margin: 0;
+    padding: 0;
+}
+
+.elevate {
+    text-align: center;
+    max-width: 80%;
+}
+
+.elevate h1 {
+    font-size: 2rem;
+    max-width: 100%;
 }
 
 footer {
