--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -22,6 +22,7 @@ div {
 
 
 body {
+    background-color: #42210B;
     display: grid;
     grid-template-areas: 
         "top top top"
@@ -43,7 +44,10 @@ body {
     margin: 0 auto;
 }
 
-
+main p {
+    font-family: 'Nunito', sans-serif;
+    color:#dfccb3;
+}
 
 header {
     grid-area: top;
@@ -83,7 +87,7 @@ nav button {
     font-size: 1.5rem;
     padding: .5em;
     margin-bottom: .35em;
-    color: rgb(246, 246, 246);
+    color: rgb(235, 235, 235);
     background-color: rgb(210, 150, 45);
     font-family: Playfair display;
 }
@@ -102,10 +106,13 @@ a.spanish:active {
 
 
 main {
+    background-color: #47311A;
     grid-area: middle;
 }
 
-
+h1, h2 {
+    color: rgb(235, 235, 235);
+}
 
 /* .section1 {
     display: flex;
@@ -132,6 +139,10 @@ figure {
 .elevate h1 {
     font-size: 2rem;
     max-width: 100%;
+}
+
+.sectionTitle {
+    text-align: center;
 }
 
 footer {
