--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -52,7 +52,7 @@ main p {
 header {
     grid-area: top;
     background-color: #006837;
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     height: 10vh;
     min-height: 70px;
@@ -141,15 +141,27 @@ figure {
     max-width: 100%;
 }
 
-.sectionTitle {
+.center {
     text-align: center;
+}
+
+.imageRight {
+    margin-left: 40%;
+}
+
+.imageLeft {
+    margin-right: 40%;
+}
+
+.buttonMargin {
+    margin-bottom: 2em;
 }
 
 footer {
     grid-area: bottom;
     background-color: rgb(0, 102, 54);
-    height: 10vh;
-    min-height: 70px;
+    height: 5vh;
+    min-height: 40px;
     padding: 0;
     margin: 0;
 }
