--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -200,16 +200,25 @@ figure {
 .portDir {
     border-radius: 30px;
     position: absolute;
+    
 }
 
 
 .portLeft {
     top: 50%;
+    font-size: 5rem;
+    color: rgba(200,200,200,.7);
+    background-color: rgba(0,0,0,0.25);
+    border: none;
 }
 
 .portRight {
     top: 50%;
     right: .1px;
+    font-size: 5rem;
+    color: rgba(200,200,200,.7);
+    background-color: rgba(0,0,0,0.25);
+    border: none;
 }
 
 footer {
