--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -150,11 +150,27 @@ figure {
     border-radius: 30px 0;
     font-size: 1.5rem;
     padding: .5em;
-    margin-bottom: .35em;
+    margin-bottom: 2em;
     color: rgb(230, 230, 230);
     background-color: rgb(210, 150, 45);
     font-family: 'Playfair Display', serif;
     border-color: rgb(210, 150, 45);
+}
+
+#section1 img {
+    margin-bottom: 2em;
+}
+
+hr {
+    border-top: none;
+    border-left: none;
+}
+
+hr {
+    width: 80%;
+    border-color: #006837;
+    border-width: .5em;
+    
 }
 
 .center {
