--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -45,7 +45,7 @@ body {
 header {
     grid-area: top;
     background-color: #006837;
-    /* position: sticky; */
+    position: sticky;
     top: 0;
     height: 10vh;
     min-height: 70px;
@@ -256,4 +256,5 @@ footer {
     min-height: 40px;
     padding: 0;
     margin: 0;
+    padding: auto auto;
 }
