--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -1,24 +1,3 @@
-/* section {
-    border: 3px solid red;
-}
-
-header, footer {
-    border: 3px solid green;
-}
-
-body {
-    border: 3px solid yellow;
-}
-
-main {
-    border: 3px solid purple;
-}
-
-div {
-    border: 3px solid orange;
-} */
-
-
 
 
 body {
@@ -115,17 +94,6 @@ main p {
     font-size: 2rem;
 }
 
-/* .section1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-} */
-
-/* .section1 figure {
-    display: none;
-    width: fit-content;
-} */
-
 figure {
     margin: 0 auto;
     padding: 0;
@@ -210,15 +178,7 @@ hr {
 
 .portfolioCar {
     position: relative;
-    /* Border for portfolio figure element */
-    /* border: 6px solid orange; */
 }
-
-/* Border for portfolio div */
-/* .portDiv {
-    border: 6px solid white;
-} */
-
 
 .portDir {
     border-radius: 30px;
@@ -253,6 +213,10 @@ footer {
     margin: 0;
 }
 
+footer p {
+    margin: .5em;
+}
+
 .doNotDisplay {
     display: none;
 }
@@ -267,9 +231,29 @@ footer {
         color: rgb(35, 35,35);
     }
 
-    #callButton {
+    #firstCallButton {
         display: none;
     }
+
+    #messageButton {
+        display: inline;
+        text-decoration: none;
+    }
+    a:link {
+        text-decoration: none;
+  }
+  
+  a#messageButton:visited {
+        text-decoration: none;
+  }
+  
+  a#messageButton:hover {
+        text-decoration: none;
+  }
+  
+  a#messageButton:active {
+        text-decoration: none;
+  }
 
     #constructionMessage {
         display: block;
