--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -153,17 +153,19 @@ hr {
 }
 
 #before-btn {
-    border-radius: 30px 0 0 30px;
+    border-radius: 0;
     font-family: 'Playfair Display', serif;
     border: none;
     text-align: center;
+    font-size: 3.45rem;
 }
 
 #after-btn {
-    border-radius: 0 30px 30px 0;
+    border-radius: 0;
     font-family: 'Playfair Display', serif;
     border: none;
     text-align: center;
+    font-size: 3.45rem;
 }
 
 .portActive {
@@ -273,4 +275,9 @@ footer p {
         width: 100%;
         height: 100%;
     }
+}
+
+.viewButton {
+    font-size: 3.4rem;
+    color: rgb(235, 235, 235);
 }
