--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -281,3 +281,12 @@ footer p {
     font-size: 3.4rem;
     color: rgb(235, 235, 235);
 }
+
+.spaceBetweenItems {
+    /* display: flex;
+    flex-direction: row;
+    justify-content: space-around; */
+    /* margin-left: 2em;
+    margin-right: 2em; */
+    margin: 2em;
+}
