--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -152,6 +152,13 @@ hr {
     margin-bottom: 2em;
 }
 
+.viewButton {
+    font-size: 3.4rem;
+    color: rgb(235, 235, 235);
+    background-color: transparent;
+    border: none;
+}
+
 #before-btn {
     border-radius: 0;
     font-family: 'Playfair Display', serif;
@@ -175,7 +182,7 @@ hr {
 
 .portNotActive {
     background-color: #C19A6B;
-    color: rgb(35, 35,35);
+    color: #47311A;
 }
 
 .portfolioCar {
@@ -217,6 +224,19 @@ footer {
 
 footer p {
     margin: .5em;
+    color: rgb(235, 235, 235);
+}
+
+footer a:link {
+    color: rgb(235, 235, 235);
+}
+
+footer a:visited {
+    color: rgb(235, 235, 235);
+}
+
+footer a:active {
+    color: rgb(235, 235, 235);
 }
 
 .doNotDisplay {
@@ -277,10 +297,7 @@ footer p {
     }
 }
 
-.viewButton {
-    font-size: 3.4rem;
-    color: rgb(235, 235, 235);
-}
+
 
 .spaceBetweenItems {
     /* display: flex;
