--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -202,6 +202,7 @@ hr {
     color: rgba(200,200,200,.7);
     background-color: rgba(0,0,0,0.25);
     border: none;
+    margin-left: .1em;
 }
 
 #portRight {
@@ -211,6 +212,7 @@ hr {
     color: rgba(200,200,200,.7);
     background-color: rgba(0,0,0,0.25);
     border: none;
+    margin-right: .1em;
 }
 
 footer {
