--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -136,6 +136,10 @@ hr {
     
 }
 
+.spaceBetweenItems {
+    margin: 2em;
+}
+
 .center {
     text-align: center;
 }
@@ -300,12 +304,10 @@ footer a:active {
 }
 
 
+/* @media (min-width: 281px) and (max-width:760px) {
+    .imgWide {
+        width: 100%;
+        height: 100%;
+    }
+} */
 
-.spaceBetweenItems {
-    /* display: flex;
-    flex-direction: row;
-    justify-content: space-around; */
-    /* margin-left: 2em;
-    margin-right: 2em; */
-    margin: 2em;
-}
