--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -262,7 +262,7 @@ footer a:active {
     display: none;
 }
 
-@media only screen and (min-width: 761px) {
+@media only screen and (min-width: 600px) {
     main {
         display: none;
     }
@@ -314,6 +314,15 @@ footer a:active {
         width: 100%;
         height: 100%;
     }
+
+    /* .logoImg {
+        width: 205px;
+        height: 34px;
+        width: 31.96rem;
+        height: 5.3rem;
+        margin-top: auto;
+        margin-bottom: auto;
+    } */
 }
 
 
@@ -378,4 +387,3 @@ footer a:active {
         
     } */
 }
-
