--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -31,11 +31,14 @@ nav {
     display: flex;
     flex-direction: row;
     margin: 0;
+    padding: 0;
 }
 
 nav img {
     max-width: 33%;
-    margin: 2em 0 0 1em;
+    /* 392px width screen 60% max-width */
+    margin: auto 0 auto 1em;
+    aspect-ratio: auto;
 }
 
 nav ul {
@@ -97,7 +100,7 @@ main p {
 figure {
     margin: 0 auto;
     padding: 0;
-    /* width: fit-content; */
+    width: fit-content;
 }
 
 .elevate {
@@ -107,6 +110,11 @@ figure {
 .elevate h1 {
     font-size: 2.45rem;
     max-width: 100%;
+    margin-bottom: .5em;
+}
+
+.elevate p {
+    margin-top: 0;
 }
 
 .elevate button {
@@ -161,8 +169,14 @@ hr {
 }
 
 .imageBigger {
-    width: 95%;
-    height: 95%;
+    width: 90%;
+    height: 90%;
+}
+
+.arBigger {
+    aspect-ratio: auto;
+    height: 200px;
+    width: 200px;
 }
 
 .buttonMargin {
@@ -262,7 +276,7 @@ footer a:active {
     display: none;
 }
 
-@media only screen and (min-width: 600px) {
+/* @media only screen and (min-width: 600px) {
     main {
         display: none;
     }
@@ -307,22 +321,14 @@ footer a:active {
     footer {
         display: none;
     }
-}
+} */
 
-@media (min-width: 281px) and (max-width:599px) {
+/* Uncomment the query below */
+@media (min-width: 281px) and (max-width:540px) {
     .imgWide {
         width: 100%;
         height: 100%;
     }
-
-    /* .logoImg {
-        width: 205px;
-        height: 34px;
-        width: 31.96rem;
-        height: 5.3rem;
-        margin-top: auto;
-        margin-bottom: auto;
-    } */
 }
 
 
@@ -368,7 +374,7 @@ footer a:active {
     }
 }
 
-@media (min-width: 600px) and (max-width:760px) {
+@media (min-width: 600px) and (max-width:720px) {
     .elevate h1 {
         font-size: 5.5rem;
     }
@@ -386,4 +392,122 @@ footer a:active {
         height: 85%;
         
     } */
+}
+
+@media only screen and (min-width: 392px) {
+    nav img {
+        max-width: 60%;
+    }
+}
+
+@media only screen and (min-width: 721px) {
+    #section1 {
+        display: flex;
+    }
+    
+    #section1 img {
+        margin: 3em 0 2em auto;
+        aspect-ratio: auto;
+        height: auto;
+        width: 90%;
+
+    }
+
+    .elevate h1 {
+        font-size: 5.91rem;
+    }
+
+    .elevate p {
+        font-size: 3rem;
+    }
+    
+
+}
+
+@media only screen and (min-width: 800px) {
+    .elevate h1 {
+        font-size: 7rem;
+    }
+
+    .elevate p {
+        font-size: 3rem;
+    }
+}
+
+@media only screen and (min-width: 850px) {
+    .elevate h1 {
+        font-size: 7.5rem;
+    }
+
+    .elevate p {
+        font-size: 3.2rem;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .elevate h1 {
+        font-size: 7.7rem;
+    }
+
+    .elevate p {
+        font-size: 3.6rem;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .elevate h1 {
+        font-size: 7.9rem;
+    }
+
+    .elevate p {
+        font-size: 3.8rem;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .elevate h1 {
+        font-size: 8rem;
+    }
+
+    .elevate p {
+        font-size: 4rem;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    .elevate h1 {
+        font-size: 8.5rem;
+    }
+
+    .elevate p {
+        font-size: 4.5rem;
+    }
+
+    .elevate {
+        height: 100%;
+    }
+}
+
+@media only screen and (min-width: 1300px) {
+    .elevate h1 {
+        font-size: 9rem;
+    }
+
+    .elevate p {
+        font-size: 5rem;
+    }
+
+    .elevate {
+        height: 100%;
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    .elevate h1 {
+        font-size: 9.5rem;
+    }
+
+    .elevate p {
+        font-size: 5.5rem;
+    }
 }
