--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -401,10 +401,29 @@ footer a:active {
     }
 }
 
+@media only screen and (max-width: 720px) {
+    .container {
+        display: none;
+    }
+    #secondCallButton {
+        display: none;
+        
+    }
+}
+
 @media only screen and (min-width: 721px) {
-    /* header {
-        height: 15vh;
-    } */
+
+    #firstCallButton {
+        display: none;
+    }
+
+    #secondCallButton {
+        font-size: 3rem;
+        font-family: 'Playfair Display', serif;
+        color: rgb(235, 235, 235);
+        margin: 0;
+        text-decoration: none;
+    }
 
     #section1 {
         display: flex;
@@ -438,7 +457,7 @@ footer a:active {
         font-size: 1.5rem;
     }
 
-    #section2Div {
+    #section2Div, #section3Div {
         display: flex;
     }
 
@@ -478,6 +497,32 @@ footer a:active {
         margin: 0;
     }
 
+    #section3Div .thirdWidth {
+        max-width: 30%;
+        margin: 2em;
+    }
+
+    #section3Div .rakeLeaves {
+        width: 100%;
+        margin-left: 125%;
+    }
+
+    #section3Div .laySod {
+        width: 60%;
+        margin-top: 8%;
+    }
+
+    #section3Div .layBrick {
+        width: 60%;
+        margin-top: 10%;
+    }
+
+    /* #section3Div img {
+        
+        height: auto;
+        width: 100%;
+    } */
+
     /* .arBigger {
         aspect-ratio: auto;
         height: 250px;
@@ -497,9 +542,7 @@ footer a:active {
 
     /* **Test above** */
 
-    .flexNone {
-        display: none;
-    }
+    
 
     /* Play with this imageBigger to get correct image size */
     .imageBigger {
@@ -515,6 +558,34 @@ footer a:active {
         border-width: .5em; */
         
     }
+
+    /* .imgWide {
+        aspect-ratio: auto;
+        width: 50%;
+        height: auto;
+    } */
+
+    #imageSlider {
+        display: none;
+    }
+
+    .container {
+        display: flex;
+	    flex-wrap: wrap;
+	    justify-content: center;
+    }
+
+    .container img {
+        aspect-ratio: auto;
+        width: 20%;
+        height: auto;
+        margin: 10px;
+        transition: all 1s;
+    }
+    
+    /* .container img:hover {
+        transform: scale(2, 2);
+    } */
 }
 
 @media only screen and (min-width: 800px) {
