--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -36,7 +36,6 @@ nav {
 
 nav img {
     max-width: 33%;
-    /* 392px width screen 60% max-width */
     margin: auto 0 auto 1em;
     aspect-ratio: auto;
 }
@@ -127,7 +126,6 @@ figure {
     background-color: rgb(210, 150, 45);
     font-family: 'Playfair Display', serif;
     border: none;
-    /* border-color: rgb(210, 150, 45); */
 }
 
 #section1 img {
@@ -251,7 +249,6 @@ hr {
 footer {
     grid-area: bottom;
     background-color: rgb(0, 102, 54);
-    height: 5vh;
     min-height: 40px;
     padding: 0;
     margin: 0;
@@ -278,54 +275,6 @@ footer a:active {
     display: none;
 }
 
-/* @media only screen and (min-width: 600px) {
-    main {
-        display: none;
-    }
-
-    body {
-        background-color: rgb(235, 235, 235);
-        color: rgb(35, 35,35);
-    }
-
-    #firstCallButton {
-        display: none;
-    }
-
-    #messageButton {
-        display: inline;
-        text-decoration: none;
-    }
-    a:link {
-        text-decoration: none;
-  }
-  
-  a#messageButton:visited {
-        text-decoration: none;
-  }
-  
-  a#messageButton:hover {
-        text-decoration: none;
-  }
-  
-  a#messageButton:active {
-        text-decoration: none;
-  }
-
-    #constructionMessage {
-        display: block;
-        font-size: 6rem;
-        margin: 0 auto;
-        padding: 1.2em;
-        text-align: center;
-    }
-
-    footer {
-        display: none;
-    }
-} */
-
-/* Uncomment the query below */
 @media (min-width: 281px) and (max-width:540px) {
     .imgWide {
         width: 100%;
@@ -387,12 +336,6 @@ footer a:active {
     main p {
         font-size: 4.9rem;
     }
-
-    /* .imgWide {
-        width: 100%;
-        height: 85%;
-        
-    } */
 }
 
 @media only screen and (min-width: 392px) {
@@ -405,7 +348,7 @@ footer a:active {
     .container {
         display: none;
     }
-    #secondCallButton {
+    #secondCallButton, #emailButton {
         display: none;
         
     }
@@ -423,6 +366,10 @@ footer a:active {
         color: rgb(235, 235, 235);
         margin: 0;
         text-decoration: none;
+    }
+
+    #elevateButton {
+        display: none;
     }
 
     #section1 {
@@ -463,7 +410,6 @@ footer a:active {
 
     #section2Div p {
         max-width: 85%;
-        /* margin-left: 2em; */
         text-align: center;
     }
 
@@ -517,29 +463,6 @@ footer a:active {
         margin-top: 10%;
     }
 
-    /* #section3Div img {
-        
-        height: auto;
-        width: 100%;
-    } */
-
-    /* .arBigger {
-        aspect-ratio: auto;
-        height: 250px;
-        width: 250px;
-    } */
-
-    /* .imageBigger {
-        width: 90%;
-        height: 90%;
-    }
-    
-    .arBigger {
-        aspect-ratio: auto;
-        height: 200px;
-        width: 200px;
-    } */
-
     /* **Test above** */
 
     
@@ -554,16 +477,7 @@ footer a:active {
 
     hr {
         width: 100%;
-        /* border-color: #006837;
-        border-width: .5em; */
-        
     }
-
-    /* .imgWide {
-        aspect-ratio: auto;
-        width: 50%;
-        height: auto;
-    } */
 
     #imageSlider {
         display: none;
@@ -582,10 +496,6 @@ footer a:active {
         margin: 10px;
         transition: all 1s;
     }
-    
-    /* .container img:hover {
-        transform: scale(2, 2);
-    } */
 }
 
 @media only screen and (min-width: 800px) {
@@ -596,10 +506,6 @@ footer a:active {
     .elevate p {
         font-size: 3rem;
     }
-
-    /* nav button {
-        font-size: 2.9rem;
-    } */
 
     .spanish {
         font-size: 1.5rem;
